--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "less-loader": "^5.0.0",
     "react-hot-loader": "^4.12.12",
     "redux-devtools-extension": "^2.13.8",
+    "http-proxy-middleware": "^0.19.1",
     "webpack-bundle-analyzer": "^3.5.0"
   },
   "homepage": "//f6-ming.oss-cn-beijing.aliyuncs.com/react-blog/"
