--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,23 @@ version: '3'
 
 services:
   nodejs:
-    image: myblog-api:1.6
+    image: myblog-api:3.3
     container_name: nodejs
+    build: 
+      context: ./
+      dockerfile: ./server/docker/Dockerfile
     restart: unless-stopped
-    environment: 
-      - NODE_ENV=production
     ports:
       - "6060:6060"
+      - "2208:22"
+    environment:
+      NODE_ENV: production  #development
+    
     networks:
       - app-network
       
   webserver:
-    image: myblog:1.9
+    image: myblog:2.3
     container_name: webserver
     restart: unless-stopped
     ports:
@@ -23,18 +28,21 @@ services:
     networks:
       - app-network
   
-  db:
-    image: mysql:5.7.24
-    container_name: db
+  mysql:
+    image: mysql-sql:1.3
+    container_name: mysql
+    build: 
+      context: ./
+      dockerfile: ./server/mysql/Dockerfile
     restart: unless-stopped
-    ports:
-      - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_DATABASE=test
       - MYSQL_USER=root   #创建test用户
       - MYSQL_PASSWORD=123456 #设置test用户的密码
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - "3307:3306"
     networks:
       - app-network
 
