--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.2",
     "react-dev-utils": "^9.0.3",
-    "react-dom": "^16.9.0",
+    "react-dom": "16.9.0",
     "react-redux": "^7.1.1",
     "react-responsive": "^8.0.1",
     "react-router-dom": "^5.0.1",
-    "react-simplemde-editor": "^4.1.0",
+    "react-simplemde-editor": "4.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "resolve": "1.12.0",
